@@ -721,6 +721,8 @@
  - API: Making a SplitDockStation very small, such that dividers become invalid, no longer changes the valud of dividers forever.
  - API: SplitDockStation now suppors "Span" as well.
  - Bugfix: When multiple listeners are receiving Key- and DoubleClick-Events, the the listeners further down the tree are invoked first.
+ - API: New FocusHistory keeps track of the order of focused Dockables, can be accessed through DockController.getFocusHistory
+ - API: CControl will transfer the focus from minimized Dockables to not minimized Dockables
    
 [Todo]
 - Drop StackDockStation over Dockable and merge them
